--- a/index.html
+++ b/index.html
@@ -1,41 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Styling Example</title>
-    <!-- Internal CSS-->
-     <style>
-        h2{
-            color: aqua;
-        }
-     </style>
-     <!--External CSS-->
-     <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <hr>
-    <!--Inline CSS-->
-    <h1 style="color: blueviolet;">INLINE CSS EXAMPLE</h1>
-    <!--Internal CSS-->
-    <h2>INTERNAL CSS EXAMPLE</h1>
-    <!--External CSS-->
-    <h3>EXTERNAL CSS EXAMPLE</h1>
-    <hr>
-
-    <!--element selector example-->
-    <h4>ELEMENT SELECTOR EXAMPLE</h4>
-    <h4>ELEMENT SELECTOR EXAMPLE</h4>
-    <hr>
-    <!--class id selector example -->
-    <h2 class="myclass">CLASS SELECTOR</h2>
-    <h2 id="myid">ID SELECTOR EXAMPLE</h2>
-    <h2 class="myclass">CLASSS SELECTOR EXAMPLE</h2>
-    <hr>
-
-
-    <!--group selector example-->
-    <h5>GROUP SELECTOR EXAMPLE</h5>
-    <p>GROUP SELECTOR EXAMPLE</p>
-</body>
+<html>
+    <head>
+        <style>
+            body{
+                background-color: bisque;
+                background-image: url(bgl1.png);
+                background-repeat: no-repeat;
+                background-position: center;
+                background-attachment: fixed;
+            }
+        </style>
+        <body>Hello</body>
+    </head>
 </html>
