--- a/Index.html
+++ b/Index.html
@@ -1,17 +1,24 @@
-<!DOCTYPE html>
+<!DOCTYPE html>>
 <html>
+    <head>
+        <style>
+            img#flowerRight {
+                float: right;
+            }
+            img#flowerLeft {
+                float: left;
+            }
+        </style>
+    </head>
+    <body>
+        <h2>Float Right</h2>
 
-<head>
-    <meta charset="utf-8">
-    <meta name="Viewport" content="width=devive-width">
-    <link href="style.css" rel="stylesheet" type="text/css" />
-</head>
+        <p>In this example, the image will float to the right in the paragraph, and the text in the paragraph will wrap around the image.</p>
 
-<body>
-    <h2>Welcome to Coding</h2>
-    <center>
-        <img src="html1.jpeg" alt="plants" width="500" height="500" >
-    </center>
-</body>
-
+        <p>
+            <img id="flowerRight" src="flower.jpeg" alt="=tree" style="width: 100px; height: 100px;">
+            <img id="flowerLeft" src="flower.jpeg" alt="=tree" style="width: 100px; height: 100px;">
+            This is a dummy content used to understand float property
+        </p>
+    </body>
 </html>
