--- a/Index.html
+++ b/Index.html
@@ -1,24 +1,43 @@
-<!DOCTYPE html>>
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Simple Carousel</title>
         <style>
-            img#flowerRight {
-                float: right;
+            body{
+                background-color: #deb878;
             }
-            img#flowerLeft {
-                float: left;
+            h1{
+                text-align: center;
+                text-decoration: underline;
+                text-transform: capitalize;
+            }
+            .carousel-container{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 300px;
+                /* Adjust based on your image height */
+                /* Hide all slides by default */
+            }
+            .myslides{
+                display: none;
+                max-height: 100%;
+                max-width: 100%;
+                /* Ensure images fit within the container */
             }
         </style>
     </head>
     <body>
-        <h2>Float Right</h2>
-
-        <p>In this example, the image will float to the right in the paragraph, and the text in the paragraph will wrap around the image.</p>
-
-        <p>
-            <img id="flowerRight" src="flower.jpeg" alt="=tree" style="width: 100px; height: 100px;">
-            <img id="flowerLeft" src="flower.jpeg" alt="=tree" style="width: 100px; height: 100px;">
-            This is a dummy content used to understand float property
-        </p>
+        <h1>My Favorite Places</h1>
+        <div class="carousel-container">
+            <img class="myslides" src="pic1 (1).jpg" height="300" width="300" alt="Slide 1">
+            <img class="myslides" src="pic4.jpg" height="300" width="300" alt="Slide 2>
+            <img class="myslides" src="pic3.jpg" height="300" width="300" alt="Slide 3">
+        </div>
+        <script src="script.js">
+            
+        </script>
     </body>
 </html>
